# Finance_trader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  setup_cpp.py
api/: app.py  routes.py
config/: settings.py
engines/: auto_trader.py  biological_modeling.py  day_trader.py  derivatives_intelligence.py  intraday_signals.py  lookup.py  market_hours.py  market_intelligence.py  prediction.py  scenario_simulation.py  trade_execution.py
engines/cpp/: gamma_engine.cpp
ingestion/: alpaca_bars.py  alpaca_client.py  binance_ws.py  finnhub_poller.py  macro_poller.py  yahoo_finance.py
models/: schemas.py
state/: redis_client.py
tests/: test_api.py  test_day_trader.py  test_demo_all_services.py  test_engines.py  test_gamma_engine.py  test_ingestion.py  test_new_features.py  test_redis_roundtrip.py  test_rigorous_auto_trader.py
