[project]
name = "trading-intelligence-platform"
version = "0.1.0"
description = "Universal AI-Powered Prediction & Trading Intelligence Platform"
requires-python = ">=3.10"
dependencies = [
    # --- Core ---
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # --- Async / Networking ---
    "websockets>=12.0",
    "httpx>=0.27.0",

    # --- State Management ---
    "redis[hiredis]>=5.0.0",

    # --- Data / Math ---
    "polars>=0.20.0",
    "numpy>=1.26.0",

    # --- AI / ML ---
    "transformers>=4.37.0",
    "torch>=2.1.0",

    # --- Market Data APIs ---
    "alpaca-py>=0.21.0",
    "yfinance>=0.2.36",
    "finnhub-python>=2.4.19",

    # --- Build (C++ engine) ---
    "pybind11>=2.11.0",
    "setuptools>=69.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["config*", "models*", "state*", "ingestion*", "engines*", "api*"]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"
